<resources>
    <string name="app_name">千语</string>
    <string name="delete"><u>删除</u></string>
    <string name="shanchu"><u>删除</u></string>
    <string name="reply"><u>回复</u></string>
    <string name="cancelRmd"><u>取消提醒</u></string>
    <string name="cancel_"><u>取消</u></string>
    <string name="ensure"><u>确定</u></string>
    <string name="thisWeek">本周</string>
    <string name="recomend">精品推荐</string>
    <string name="others">其他推荐</string>
    <string name="tasks">任务</string>
    <string name="liveWorkPlace">名医工作台</string>
    <string name="skills">技能</string>
    <string name="buyRecord">购买记录</string>
    <string name="level">等级</string>
    <string name="watchHistory">收看记录</string>
    <string name="dynamic">动态</string>
    <string name="myIncome">我的收益</string>
    <string name="withDraw">账号提现</string>
    <string name="myProductions">我的作品</string>
    <string name="incomeDetail">收支明细</string>
    <string name="myFans">我的粉丝</string>
    <string name="exchangeMoney">葫芦兑现</string>
    <string name="mall">商城</string>
    <string name="gift">礼物</string>
    <string name="setting">设置</string>
    <string name="friend">好友</string>
    <string name="message">消息</string>
    <string name="concern">关注</string>
    <string name="chatRoom">发现</string>
    <string name="rank">排行</string>
    <string name="friendCircle">动态</string>
    <string name="find">聊吧</string>
    <string name="me">我</string>
    <string name="continueAgree">继续表示你同意</string>
    <string name="protecol">点击登录即表示您同意<u>用户协议</u></string>
    <string name="protecol_"><u>隐私条款</u></string>
    <string name="nameHint">请输入您的姓名</string>
    <string name="sexSelect">选择性别</string>
    <string name="birthSelect">选择生日</string>
    <string name="sexHint">注册成功后，性别不可以修改哦</string>
    <string name="agreeProtcol">我已同意千语用户协议</string>
    <string name="login">登录</string>
    <string name="phoneBinding">绑定手机号</string>
    <string name="phoneHint">手机号</string>
    <string name="codeHint">验证码</string>
    <string name="codeSend">发送验证码</string>
    <string name="starByBirth">选择出生日期，系统将自动计算出星座</string>
    <string name="vipTitle">VIP会员</string>
    <string name="silverNoble">白银贵族</string>
    <string name="goldNoble">黄金贵族</string>
    <string name="superNoble">至尊贵族</string>
    <string name="headImg">头像</string>
    <string name="nickName">昵称</string>
    <string name="age">年龄</string>
    <string name="work">行业</string>
    <string name="tag">标签</string>
    <string name="personalSign">个性签名</string>
    <string name="myHobby">我的兴趣</string>
    <string name="signHint">这个人太忙了，忘记签名了。</string>
    <string name="hobbyHint">说说你的兴趣和爱好</string>
    <string name="tagHint">添加符合你的标签</string>
    <string name="earnIn">收入</string>
    <string name="costOut">支出</string>
    <string name="close"><u>关闭</u></string>
    <string name="hitRateHint"><u>如何提高命中率?</u></string>
    <string name="successRateHint"><u>如何提高成功率?</u></string>
    <string name="officialSite">官方网站：<u>www.shenqimingyi.com</u></string>
    <string name="sinaWeb">新浪微博：<u>www.buka.tv.com</u></string>
    <string name="infoEdit"><u>编辑资料</u></string>
    <string name="prePhone"><u>+86</u></string>
    <string name="glide_plus_icon_string">android.resource://</string>
    <string name="post_delete_tv_d">拖动到此处，进行删除</string>
    <string name="post_delete_tv_s"> 放开手指，进行删除</string>
</resources>
